--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_edit_profile">EditProfileActivity</string>
     <string name="title_activity_maps_get_user_location">Map</string>
+    <string name="gender_preference">Gender preference</string>
+    <string name="aus_is_my">AUS is my...</string>
+    <string name="select_date">Select date</string>
+    <string name="select_time">Select time</string>
+    <string name="select_location_on_map">Select location on map</string>
+    <string name="look_for_drivers">Look For Drivers</string>
 </resources>
